--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ ForwardDiff = "~0.5.0, ~0.6, ~0.7, ~0.8, ~0.9, ~0.10"
 IntervalArithmetic = "~0.16"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
-julia = "~0.7, ~1.0, ~1.1, ~1.2, ~1.3"
+julia = "~1.1, ~1.2, ~1.3, ~1.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
