--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 language: julia
-codecov: true
-coveralls: true
-
-sudo: required
 
 os:
   - linux
@@ -13,10 +9,12 @@ julia:
   - 1.2
   - 1.3
   - 1.4
+  - 1.5
   - nightly
 
 matrix:
   allow_failures:
+  - julia: 1.5
   - julia: nightly
 
 notifications:
