--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: julia
 os:
   - linux
   - osx
+  - windows
 
 julia:
   - 1.1
@@ -12,10 +13,13 @@ julia:
   - 1.5
   - nightly
 
-matrix:
+jobs:
   allow_failures:
   - julia: 1.5
   - julia: nightly
+
+after_success:
+  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder());  Codecov.submit(process_folder())'
 
 notifications:
   email: false
