--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "McCormick"
 uuid = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 authors = ["Matthew Wilhelm <matthew.wilhelm@uconn.edu>"]
-version = "0.7.0"
+version = "0.8.0"
 
 [deps]
 DiffRules = "b552c78f-8df3-52c6-915a-8e097449b14b"
@@ -11,6 +11,7 @@ IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
@@ -21,6 +22,7 @@ IntervalArithmetic = "0.16.3, 0.16.4, 0.16.5, 0.16.6, 0.16.7, ~0.17"
 NaNMath = "0.3.3"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
+SpecialFunctions = "~0.8, ~0.9, ~0.10"
 julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
 
 [extras]
