--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ NaNMath = "0.3.3"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
 SpecialFunctions = "~0.8, ~0.9, ~0.10"
-julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
+julia = "~1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
