--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 DiffRules = "0.0.5, 0.0.6, 0.0.7, 0.0.8, 0.0.9, 0.0.10, 0.1.0, ~1.0"
 DocStringExtensions = "~0.8"
 ForwardDiff = "~0.5.0, ~0.6, ~0.7, ~0.8, ~0.9, ~0.10"
-IntervalArithmetic = "0.16.3, 0.16.4, 0.16.5, 0.16.6, 0.16.7, ~0.17"
+IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
 IntervalRootFinding = "0.5.4"
 NaNMath = "0.3.3"
 Reexport = "~0.2"
