--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ DiffRules = "b552c78f-8df3-52c6-915a-8e097449b14b"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
+IntervalRootFinding = "d2bf35a9-74e0-55ec-b149-d360ff49b807"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -19,6 +20,7 @@ DiffRules = "0.0.5, 0.0.6, 0.0.7, 0.0.8, 0.0.9, 0.0.10, 0.1.0, ~1.0"
 DocStringExtensions = "~0.8"
 ForwardDiff = "~0.5.0, ~0.6, ~0.7, ~0.8, ~0.9, ~0.10"
 IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
+IntervalRootFinding = "≥ 0.5"
 NaNMath = "0.3.3"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
