--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,32 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version:
-          - '1' # Leave this line unchanged. '1' will automatically expand to the latest stable 1.x release of Julia.
-          - 'nightly'
-        os:
-          - ubuntu-latest
-        arch:
-          - x64
+
+        include:
+          - version: '1'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.0'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.1'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.2'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.3'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.4'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.0'
+            os: ubuntu-latest
+            arch: x86
+          - version: '1'
+            os: windows-latest
+            arch: x64
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
