--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ DiffRules = "0.0.5, 0.0.6, 0.0.7, 0.0.8, 0.0.9, 0.0.10, 0.1.0, ~1.0"
 DocStringExtensions = "~0.8"
 ForwardDiff = "~0.5.0, ~0.6, ~0.7, ~0.8, ~0.9, ~0.10"
 IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
-IntervalRootFinding = "≥ 0.5"
+IntervalRootFinding = "~0.5"
 NaNMath = "0.3.3"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
