--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
           - version: '1.4'
             os: ubuntu-latest
             arch: x64
+          - version: '1.5'
+            os: ubuntu-latest
+            arch: x64
           - version: '1'
             os: windows-latest
             arch: x64
