--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
 IntervalRootFinding = "d2bf35a9-74e0-55ec-b149-d360ff49b807"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
+NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -22,6 +23,7 @@ ForwardDiff = "~0.5.0, ~0.6, ~0.7, ~0.8, ~0.9, ~0.10"
 IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
 IntervalRootFinding = "~0.5"
 NaNMath = "0.3.3"
+NNlib = "~0.7"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
 SpecialFunctions = "~0.8, ~0.9, ~0.10"
