--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ ForwardDiff = "~0.5.0, ~0.6, ~0.7, ~0.8, ~0.9, ~0.10"
 IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
 IntervalRootFinding = "~0.5"
 NaNMath = "0.3.3"
-NNlib = "~0.7"
+NNlib = "~0.6, ~0.7"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
 SpecialFunctions = "~0.8, ~0.9, ~0.10"
