--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ NaNMath = "0.3.3"
 NNlib = "~0.6, ~0.7"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
-SpecialFunctions = "~0.8, ~0.9, ~0.10"
+SpecialFunctions = "~0.8, ~0.9, ~0.10, ~1"
 julia = "~1"
 
 [extras]
