--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,25 +16,13 @@ jobs:
       matrix:
 
         include:
+          - version: '1.6'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.6'
+            os: windows-latest
+            arch: x64
           - version: '1'
-            os: ubuntu-latest
-            arch: x64
-          - version: '1.0'
-            os: ubuntu-latest
-            arch: x64
-          - version: '1.1'
-            os: ubuntu-latest
-            arch: x64
-          - version: '1.2'
-            os: ubuntu-latest
-            arch: x64
-          - version: '1.3'
-            os: ubuntu-latest
-            arch: x64
-          - version: '1.4'
-            os: ubuntu-latest
-            arch: x64
-          - version: '1.5'
             os: ubuntu-latest
             arch: x64
           - version: '1'
