--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,6 @@ DiffRules = "b552c78f-8df3-52c6-915a-8e097449b14b"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
-IntervalRootFinding = "d2bf35a9-74e0-55ec-b149-d360ff49b807"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
@@ -17,16 +16,15 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-DiffRules = "0.0.5, 0.0.6, 0.0.7, 0.0.8, 0.0.9, 0.0.10, 0.1.0, ~1.0"
+DiffRules = "1.5"
 DocStringExtensions = "~0.8"
-ForwardDiff = "~0.5.0, ~0.6, ~0.7, ~0.8, ~0.9, ~0.10"
-IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
-IntervalRootFinding = "~0.5"
-NaNMath = "0.3.3"
-NNlib = "~0.6, ~0.7"
+ForwardDiff = "~0.10"
+IntervalArithmetic = "~0.20"
+NaNMath = "0.3.5"
+NNlib = "~0.7"
 Reexport = "~0.2"
-StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
-SpecialFunctions = "~0.8, ~0.9, ~0.10, ~1"
+StaticArrays = "~1.2"
+SpecialFunctions = "~2"
 julia = "~1.6, ~1.7"
 
 [extras]
