--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "McCormick"
 uuid = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 authors = ["Matthew Wilhelm <matthew.wilhelm@uconn.edu>"]
-version = "0.11.2"
+version = "0.11.1"
 
 [deps]
 DiffRules = "b552c78f-8df3-52c6-915a-8e097449b14b"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
+IntervalRootFinding = "d2bf35a9-74e0-55ec-b149-d360ff49b807"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NaNMath = "77ba4419-2d1f-58cd-9bb1-8ffee604a2e3"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
@@ -20,6 +21,7 @@ DiffRules = "1.5"
 DocStringExtensions = "~0.8"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.20"
+IntervalRootFinding = "~0.5"
 NaNMath = "0.3.5"
 NNlib = "~0.7"
 Reexport = "~0.2"
