--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ NaNMath = "0.3.5"
 NNlib = "~0.7"
 Reexport = "~0.2"
 StaticArrays = "~1.2"
-SpecialFunctions = "~2"
+SpecialFunctions = "`~1, ~2"
 julia = "~1.6, ~1.7"
 
 [extras]
