--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ IntervalArithmetic = "~0.20"
 IntervalRootFinding = "~0.5"
 NaNMath = "0.3.5"
 NNlib = "~0.7"
-Reexport = "~0.2"
+Reexport = "~0.2, ~1"
 StaticArrays = "~1.2"
 SpecialFunctions = "~1, ~2"
 julia = "~1.6, ~1.7"
