--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 [compat]
 DiffRules = "1.5"
 DocStringExtensions = "~0.8"
-ForwardDiff = "~0.10"
+ForwardDiff = "0.10.25"
 IntervalArithmetic = "~0.20"
 IntervalRootFinding = "~0.5"
 NaNMath = "~1"
