--- a/Project.toml
+++ b/Project.toml
@@ -19,10 +19,10 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 [compat]
 DiffRules = "1.5"
 DocStringExtensions = "~0.8"
-ForwardDiff = "0.10.25"
+ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.20"
 IntervalRootFinding = "~0.5"
-NaNMath = "~1"
+NaNMath = "1"
 NNlib = "~0.7"
 Reexport = "~0.2, ~1"
 StaticArrays = "~1.2"
