--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ DocStringExtensions = "~0.8"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.20"
 IntervalRootFinding = "~0.5"
-NaNMath = "0.3.5"
+NaNMath = "0.3.5, 1.0"
 NNlib = "~0.7"
 Reexport = "~0.2, ~1"
 StaticArrays = "~1.2"
