--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ Reexport = "~0.2, ~1"
 StaticArrays = "~1.2"
 SpecialFunctions = "~1, ~2"
 UnPack = "~1"
-julia = "1.6 - 1.8"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
