--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "McCormick"
 uuid = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 authors = ["Matthew Wilhelm <matthew.wilhelm@uconn.edu>"]
-version = "0.13.3"
+version = "0.13.4"
 
 [deps]
 DiffRules = "b552c78f-8df3-52c6-915a-8e097449b14b"
@@ -19,7 +19,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 DiffRules = "1.5"
-DocStringExtensions = "0.8, 0.9"
+DocStringExtensions = "~0.8, ~0.9"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.20"
 IntervalRootFinding = "~0.5"
