--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.20"
 IntervalRootFinding = "~0.5"
 NaNMath = "0.3.5, 1.0"
-NNlib = "~0.8"
+NNlib = "~0.8, ~0.9"
 Reexport = "~0.2, ~1"
 StaticArrays = "~1"
 SpecialFunctions = "~1, ~2"
