--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "McCormick"
 uuid = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 authors = ["Matthew Wilhelm <matthew.wilhelm@uconn.edu>"]
-version = "0.13.6"
+version = "0.13.7"
 
 [deps]
 DiffRules = "b552c78f-8df3-52c6-915a-8e097449b14b"
@@ -24,7 +24,7 @@ ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.20"
 IntervalRootFinding = "~0.5"
 NaNMath = "0.3.5, 1.0"
-NNlib = "~0.8"
+NNlib = "~0.8, ~0.9"
 Reexport = "~0.2, ~1"
 StaticArrays = "~1"
 SpecialFunctions = "~1, ~2"
